Crash caused by lambda proxy class loaded in Shutdown hook

XMLWordPrintable

    • b11

        When creating a dynamic CDS archive with -XX:ArchiveClassesAtExit, if a lambda proxy class P is loaded inside a Shutdown hook, the proxy's nest_host class N may not be properly linked. This causes the N to be missing from the archive.

        When P is loaded from the archive at run time, it require that N must also be in the archive. Since this is not the case, the VM crashes in subsequent operations.

              Assignee:
              Calvin Cheung (Inactive)
              Reporter:
              Ioi Lam
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: