8261860: Crash caused by lambda proxy class loaded in Shutdown hook